# rich-cli-kit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  audit_scorecard.json  cliff.toml  deny.toml
.github/: dependabot.yml
.github/workflows/: cargo-audit.yml  cargo-deny.yml  cargo-machete.yml  cargo-semver-checks.yml  codeql-rust.yml  codeql.yml  doc-links.yml  fr-coverage.yml  journey-gate.yml  quality-gate.yml  release-attestation.yml  scorecard.yml  trufflehog.yml
bare.git/: config  packed-refs
bare.git/objects/pack/: pack-870e52dc35822f1fc0bc182024931b581b262513.idx  pack-870e52dc35822f1fc0bc182024931b581b262513.pack  pack-870e52dc35822f1fc0bc182024931b581b262513.rev
crates/klipdot/: .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  ABSORBED.md  ADR.md  ADRS.md  AGENTS.md  CHANGELOG.md  CHARTER.md  CLAUDE.md  CODEOWNERS  COMPREHENSIVE_TERMINAL_INTERCEPTION.md  CONTRIBUTING.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  PLAN.md  PRD.md  PRODUCTION_READY.md  README.md  SECURITY.md  SOTA.md  SPEC.md  audit_scorecard.json  clipboard_debug.sh  clippy.toml  deny.toml  install.sh  justfile  p2.py  p3.py  parse_clippy.py  production-setup.sh  quick-preview.zsh  rustfmt.toml  test-comprehensive.js  test_clipboard.sh  worklog.md  zsh-preview-integration.zsh
crates/klipdot/.github/: FUNDING.yml  README.md
crates/klipdot/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md  security_report.md
crates/klipdot/.github/workflows/: cargo-deny.yml  ci.yml  doc-links.yml  fr-coverage.yml  legacy-tooling-gate.yml  quality-gate.yml  release.yml  scorecard.yml  tier0-hygiene.yml  trufflehog.yml
crates/klipdot/demos/: README.md  demo-actual-usage.tape  demo-ai-integration.tape  demo-authentic-usage.tape  demo-basic-preview.tape  demo-clipboard-workflow.tape  demo-comprehensive-showcase.tape  demo-live-preview.tape  demo-quick-showcase.tape  demo-real-preview.tape  demo-terminal-preview.tape  demo-tui-integration.tape  demo-working-features.tape
crates/klipdot/docs/: index.md
crates/klipdot/docs/boundary/: KlipDot.md
crates/klipdot/docs/intent/: KlipDot.md
crates/klipdot/docs/specs/: FR.md  TRACEABILITY.md
crates/klipdot/docs/worklogs/: README.md
crates/klipdot/src/: claude-code-integration.js  cli.js  clipboard-handler.js  clipboard.rs  comprehensive-interceptor.js  config.rs  error.rs  image_preview.rs  image_processor.rs  index.js  installer.rs  interceptor.rs  lib.rs  main.rs  service.rs  shell_hooks.rs  stdout_monitor.rs  terminal-interceptor.js
crates/klipdot/test/: clipboard-handler.test.js
crates/klipdot/tests/: smoke_test.rs
crates/rck-cli/: Cargo.toml
crates/rck-cli/src/: main.rs
crates/rck-core/: Cargo.toml
crates/rck-core/src/: capabilities.rs  emit.rs  encoder.rs  image_data.rs  interactive.rs  lib.rs  panel.rs  progress.rs  shader.rs  spans.rs  width.rs
docs/: ghostty_capabilities.md  index.md
docs/adr/: 0001-record-architecture-decisions.md
docs/audit/: CLI_AX_INSTALL.md  QUALITY.md
docs/journeys/manifests/: main-flow.json
docs/operations/: journey-traceability.md
docs/operations/iconography/: SPEC.md
docs/sessions/20260430-sladge-badge-rollout/: 00_SESSION_OVERVIEW.md  01_RESEARCH.md  02_SPECIFICATIONS.md  03_DAG_WBS.md  04_IMPLEMENTATION_STRATEGY.md  05_KNOWN_ISSUES.md  06_TESTING_STRATEGY.md
docs/sessions/20260507-rich-cli-kit-sladge-current-refresh/: 00_SESSION_OVERVIEW.md  01_RESEARCH.md  02_SPECIFICATIONS.md  03_DAG_WBS.md  04_IMPLEMENTATION_STRATEGY.md  05_KNOWN_ISSUES.md  06_TESTING_STRATEGY.md
docs/specs/: FR.md  TRACEABILITY.md
mcp/: pyproject.toml
mcp/rich_cli_mcp/: __init__.py  rck.py  server.py
mcp/tests/: test_rck_wrapper.py
shaders/: README.md  agent-active.glsl  focus-vignette.glsl  progress-pulse.glsl
tests/: clap_ext_smoke.rs  smoke_test.rs  test_capabilities.rs  test_encoder.rs  test_osc_sequences.rs  test_panel.rs  test_progress.rs
worklogs/: ARCHITECTURE.md  GOVERNANCE.md  README.md  RESEARCH.md
