[project]
name = "rich-cli-mcp"
version = "0.1.0"
description = "FastMCP server exposing rich-cli-kit (rck) to agents"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
rich-cli-mcp = "rich_cli_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rich_cli_mcp"]
