[workspace]

[package]
name = "klipdot"
version = "0.1.0"
edition = "2021"
authors = ["KlipDot Team <klipdot@example.com>"]
description = "Universal terminal image interceptor that maps images to file paths for any CLI/TUI application"
repository = "https://github.com/KooshaPari/KlipDot"
license = "MIT"
readme = "README.md"
keywords = ["clipboard", "terminal", "cli", "tui", "interceptor"]
categories = ["command-line-utilities", "multimedia::images"]

[[bin]]
name = "klipdot"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.52", features = ["full", "process"] }
clap = { version = "4.0", features = ["derive", "env"] }
clap-ext = { git = "https://github.com/KooshaPari/clap-ext", tag = "v0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
notify = "6.0"
image = "0.24"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
once_cell = "1.19"
base64 = "0.21"
hex = "0.4"
regex = "1.10"
libc = "0.2"
which = "8.0"

# Platform-specific clipboard dependencies
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11-clipboard = "0.9"
wl-clipboard-rs = "0.8"
wayland-client = "0.31"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5.4"

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.0"
mockall = "0.14"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
overflow-checks = true