[package]
name = "rck-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rich-CLI Kit core: kitty-graphics + fallback rendering primitives"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
crossterm.workspace = true
base64.workspace = true
image.workspace = true
thiserror.workspace = true
tokio.workspace = true
unicode-width.workspace = true
unicode-segmentation.workspace = true
